// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Store 1`] = `
<div
  class="row"
>
  <div
    class="col-6"
  >
    <form
      action=""
      class="row"
    >
      <div
        class="col-10"
      >
        <input
          class="form-control mr-3"
          placeholder="I am going..."
          required=""
          type="text"
          value=""
        />
      </div>
      <button
        class="btn btn-primary col-2"
        type="submit"
      >
        Add
      </button>
    </form>
  </div>
</div>
`;

exports[`Store 2`] = `
<div
  class="row"
>
  <div
    class="col-6"
  >
    <form
      action=""
      class="row"
    >
      <div
        class="col-10"
      >
        <input
          class="form-control mr-3"
          placeholder="I am going..."
          required=""
          type="text"
          value="first task"
        />
      </div>
      <button
        class="btn btn-primary col-2"
        type="submit"
      >
        Add
      </button>
    </form>
  </div>
</div>
`;

exports[`Store 3`] = `
<div
  class="row"
>
  <div
    class="col-6"
  >
    <form
      action=""
      class="row"
    >
      <div
        class="col-10"
      >
        <input
          class="form-control mr-3"
          placeholder="I am going..."
          required=""
          type="text"
          value=""
        />
      </div>
      <button
        class="btn btn-primary col-2"
        type="submit"
      >
        Add
      </button>
    </form>
    <div
      class="mt-3"
    >
      <ul
        class="list-group"
      >
        <li
          class="list-group-item d-flex bg-light"
        >
          <button
            class="btn btn-secondary btn-sm me-3"
            data-test="task-change-theme"
            type="button"
          >
            <span>
              Theme
            </span>
          </button>
          <span
            class="me-auto d-flex align-items-center"
          >
            <a
              data-test="task-toggle-state"
              href="#"
            >
              first task
            </a>
          </span>
          <button
            class="close btn"
            type="button"
          >
            <span>
              ×
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Store 4`] = `
<div
  class="row"
>
  <div
    class="col-6"
  >
    <form
      action=""
      class="row"
    >
      <div
        class="col-10"
      >
        <input
          class="form-control mr-3"
          placeholder="I am going..."
          required=""
          type="text"
          value="another task"
        />
      </div>
      <button
        class="btn btn-primary col-2"
        type="submit"
      >
        Add
      </button>
    </form>
    <div
      class="mt-3"
    >
      <ul
        class="list-group"
      >
        <li
          class="list-group-item d-flex bg-light"
        >
          <button
            class="btn btn-secondary btn-sm me-3"
            data-test="task-change-theme"
            type="button"
          >
            <span>
              Theme
            </span>
          </button>
          <span
            class="me-auto d-flex align-items-center"
          >
            <a
              data-test="task-toggle-state"
              href="#"
            >
              first task
            </a>
          </span>
          <button
            class="close btn"
            type="button"
          >
            <span>
              ×
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Store 5`] = `
<div
  class="row"
>
  <div
    class="col-6"
  >
    <form
      action=""
      class="row"
    >
      <div
        class="col-10"
      >
        <input
          class="form-control mr-3"
          placeholder="I am going..."
          required=""
          type="text"
          value=""
        />
      </div>
      <button
        class="btn btn-primary col-2"
        type="submit"
      >
        Add
      </button>
    </form>
    <div
      class="mt-3"
    >
      <ul
        class="list-group"
      >
        <li
          class="list-group-item d-flex bg-light"
        >
          <button
            class="btn btn-secondary btn-sm me-3"
            data-test="task-change-theme"
            type="button"
          >
            <span>
              Theme
            </span>
          </button>
          <span
            class="me-auto d-flex align-items-center"
          >
            <a
              data-test="task-toggle-state"
              href="#"
            >
              first task
            </a>
          </span>
          <button
            class="close btn"
            type="button"
          >
            <span>
              ×
            </span>
          </button>
        </li>
        <li
          class="list-group-item d-flex bg-light"
        >
          <button
            class="btn btn-secondary btn-sm me-3"
            data-test="task-change-theme"
            type="button"
          >
            <span>
              Theme
            </span>
          </button>
          <span
            class="me-auto d-flex align-items-center"
          >
            <a
              data-test="task-toggle-state"
              href="#"
            >
              another task
            </a>
          </span>
          <button
            class="close btn"
            type="button"
          >
            <span>
              ×
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Store 6`] = `
<div
  class="row"
>
  <div
    class="col-6"
  >
    <form
      action=""
      class="row"
    >
      <div
        class="col-10"
      >
        <input
          class="form-control mr-3"
          placeholder="I am going..."
          required=""
          type="text"
          value=""
        />
      </div>
      <button
        class="btn btn-primary col-2"
        type="submit"
      >
        Add
      </button>
    </form>
    <div
      class="mt-3"
    >
      <ul
        class="list-group"
      >
        <li
          class="list-group-item d-flex bg-light"
        >
          <button
            class="btn btn-secondary btn-sm me-3"
            data-test="task-change-theme"
            type="button"
          >
            <span>
              Theme
            </span>
          </button>
          <span
            class="me-auto d-flex align-items-center"
          >
            <a
              data-test="task-toggle-state"
              href="#"
            >
              <s>
                first task
              </s>
            </a>
          </span>
          <button
            class="close btn"
            type="button"
          >
            <span>
              ×
            </span>
          </button>
        </li>
        <li
          class="list-group-item d-flex bg-light"
        >
          <button
            class="btn btn-secondary btn-sm me-3"
            data-test="task-change-theme"
            type="button"
          >
            <span>
              Theme
            </span>
          </button>
          <span
            class="me-auto d-flex align-items-center"
          >
            <a
              data-test="task-toggle-state"
              href="#"
            >
              another task
            </a>
          </span>
          <button
            class="close btn"
            type="button"
          >
            <span>
              ×
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Store 7`] = `
<div
  class="row"
>
  <div
    class="col-6"
  >
    <form
      action=""
      class="row"
    >
      <div
        class="col-10"
      >
        <input
          class="form-control mr-3"
          placeholder="I am going..."
          required=""
          type="text"
          value=""
        />
      </div>
      <button
        class="btn btn-primary col-2"
        type="submit"
      >
        Add
      </button>
    </form>
    <div
      class="mt-3"
    >
      <ul
        class="list-group"
      >
        <li
          class="list-group-item d-flex bg-light"
        >
          <button
            class="btn btn-secondary btn-sm me-3"
            data-test="task-change-theme"
            type="button"
          >
            <span>
              Theme
            </span>
          </button>
          <span
            class="me-auto d-flex align-items-center"
          >
            <a
              data-test="task-toggle-state"
              href="#"
            >
              first task
            </a>
          </span>
          <button
            class="close btn"
            type="button"
          >
            <span>
              ×
            </span>
          </button>
        </li>
        <li
          class="list-group-item d-flex bg-light"
        >
          <button
            class="btn btn-secondary btn-sm me-3"
            data-test="task-change-theme"
            type="button"
          >
            <span>
              Theme
            </span>
          </button>
          <span
            class="me-auto d-flex align-items-center"
          >
            <a
              data-test="task-toggle-state"
              href="#"
            >
              another task
            </a>
          </span>
          <button
            class="close btn"
            type="button"
          >
            <span>
              ×
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Store 8`] = `
<div
  class="row"
>
  <div
    class="col-6"
  >
    <form
      action=""
      class="row"
    >
      <div
        class="col-10"
      >
        <input
          class="form-control mr-3"
          placeholder="I am going..."
          required=""
          type="text"
          value=""
        />
      </div>
      <button
        class="btn btn-primary col-2"
        type="submit"
      >
        Add
      </button>
    </form>
    <div
      class="mt-3"
    >
      <ul
        class="list-group"
      >
        <li
          class="list-group-item d-flex bg-light"
        >
          <button
            class="btn btn-secondary btn-sm me-3"
            data-test="task-change-theme"
            type="button"
          >
            <span>
              Theme
            </span>
          </button>
          <span
            class="me-auto d-flex align-items-center"
          >
            <a
              data-test="task-toggle-state"
              href="#"
            >
              first task
            </a>
          </span>
          <button
            class="close btn"
            type="button"
          >
            <span>
              ×
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
